[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/tools/layer_trigger/layer_trigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 56 )

[node name="LayerTrigger" type="Node2D"]
script = ExtResource( 1 )

[node name="UpperTrigger" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperTrigger"]
shape = SubResource( 1 )

[node name="LowerTrigger" type="Area2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerTrigger"]
shape = SubResource( 2 )

[node name="TriggerMask" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerMask"]
shape = SubResource( 3 )

[connection signal="body_entered" from="UpperTrigger" to="." method="_on_UpperTrigger_body_entered"]
[connection signal="body_exited" from="UpperTrigger" to="." method="_on_UpperTrigger_body_exited"]
[connection signal="body_entered" from="LowerTrigger" to="." method="_on_LowerTrigger_body_entered"]
[connection signal="body_exited" from="LowerTrigger" to="." method="_on_LowerTrigger_body_exited"]
[connection signal="body_entered" from="TriggerMask" to="." method="_on_TriggerMask_body_entered"]
[connection signal="body_exited" from="TriggerMask" to="." method="_on_TriggerMask_body_exited"]
